--- a/bjs/10_function_object/index.html
+++ b/bjs/10_function_object/index.html
@@ -19,15 +19,16 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col">
-                            <h3 class="card-title"><span id="surnameOutput">Генерация фамилии</span></h3>
-                            <h4>Имя: <span id="firstNameOutput">Иван</span></h4>
-                            <p>
-                                <span id="genderOutput">Генерация пола</span>
-                                <span>, </span>
-                                <span id="birthYearOutput">Генерация года рождения</span>
-                            </p>
+                            <h4 class="card-title">Фамилия: <span id="surnameOutput"></span></h4>
+                            <h4>Имя: <span id="firstNameOutput"></span></h4>
+                            <h4>Отчество: <span id="middleNameOutput"></span></h4>
+                            <p>Пол: <span id="genderOutput"></span></p>
+                            <p>Дата рождения: <span id="birthYearOutput"></span></p>
+                            <p>Профессия: <span id="professionOutput"></span></p>
                         </div>
                     </div>
+                    <button class="btn" id="btnCreate">Сгенерировать</button>
+                    <button class="btn" id="btnClear">Cбросить</button>
                 </div>
             </div>
         </div>
