--- a/bjs/08_if_else/index.html
+++ b/bjs/08_if_else/index.html
@@ -9,34 +9,73 @@
     <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
 <body>
-<div class="container">
-    <div class="row game-card align-items-center">
-        <div class="col col-md-4 offset-md-4">
-            <div class="card text-center">
-                <div class="card-header">
-                    <p class="m-0">Вопрос №<span id="orderNumberField">5</span></p>
-                </div>
-                <div class="card-body">
-                    <div class="row no-gutters">
-                        <div class="col">
-                            <h3 class="card-title m-0"><span id="answerField">Вы загадали число 5?</span></h3>
+    <div class="container" id="inputNumberPage" tabindex="-1">
+        <div class="row game-card align-items-center">
+            <div class="col col-md-4 offset-md-4">
+                <div class="card text-center">
+                    <div class="block-body">
+                        <div class="form-body">
+                            <p id="formText">Укажите диапазон чисел для игры (от -999 до 999):</p>
+                            <form>
+                                <div class="form-group">
+                                    <input class="form-control form-control-sm" id="minValue" type="text" placeholder="Минимальное значение">
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control form-control-sm" id="maxValue" type="text" placeholder="Максимальное значение">
+                                </div>
+                            </form>
+                        </div>
+                        <div class="block-footer">
+                            <button type="button" class="btn btn-info" id="btnNext">Далее</button>
                         </div>
                     </div>
-                </div>
-                <div class="card-body">
-                    <div class="btn-group">
-                        <button class="btn btn-info" id="btnLess">&#129047;<br>меньше</button>
-                        <button class="btn btn-success btn-lg" id="btnEqual">Верно!</button>
-                        <button class="btn btn-info" id="btnOver">больше<br>&#129045;</button>
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <button class="btn btn-link" id="btnRetry">Заново</button>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<script src="script.js"></script>
+    <div class="container" id="startPage" tabindex="-1">
+        <div class="row game-card align-items-center">
+            <div class="col col-md-4 offset-md-4">
+                <div class="card text-center">
+                    <div class="block-body">
+                        <p class="text-center" id="startPageText">Загадай число</p>
+                    </div>
+                    <div class="block-footer">
+                        <button type="button" class="btn btn-info" id="btnStart">Старт</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+	</div>
+    <div class="container" id="gamePage">
+        <div class="row game-card align-items-center">
+            <div class="col col-md-4 offset-md-4">
+                <div class="card text-center">
+                    <div class="card-header">
+                        <p class="m-0">Вопрос №<span id="orderNumberField">5</span></p>
+                    </div>
+                    <div class="card-body">
+                        <div class="row no-gutters">
+                            <div class="col">
+                                <h3 class="card-title m-0"><span id="answerField">Вы загадали число 5?</span></h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <div class="btn-group">
+                            <button class="btn btn-info" id="btnLess">&#129047;<br>меньше</button>
+                            <button class="btn btn-success btn-lg" id="btnEqual">Верно!</button>
+                            <button class="btn btn-info" id="btnOver">больше<br>&#129045;</button>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-link" id="btnRetry">Заново</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
