--- a/bjs/08_if_else/index.html
+++ b/bjs/08_if_else/index.html
@@ -15,7 +15,7 @@
                 <div class="card text-center">
                     <div class="block-body">
                         <div class="form-body">
-                            <p id="formText">Укажите диапазон чисел для игры (от -999 до 999):</p>
+                            <p id="formText">Укажите диапазон чисел для игры (от -999 до 999). Минимальное значение не может превышать максимальное:</p>
                             <form>
                                 <div class="form-group">
                                     <input class="form-control form-control-sm" id="minValue" type="text" placeholder="Минимальное значение">
